# cow-py

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  conftest.py  mkdocs.yml  openapi.yml  pip-requirements.txt  pyproject.toml  shell.nix  tbump.toml
.github/workflows/: ci.yml  ci_core.yml  pages.yaml  publish-to-test-pypi.yml  release.yml
cow_py/: __init__.py
cow_py/app_data/: appDataCid.py  appDataDoc.py  appDataHex.py  app_data_cid.py  app_data_doc.py  app_data_hex.py  consts.py  utils.py
cow_py/app_data/schemas/: definitions.json
cow_py/codegen/: abi_handler.py  main.py  solidity_converter.py
cow_py/codegen/__generated__/: ComposableCow.py  ExtensibleFallbackHandler.py  Milkman.py  TWAP.py
cow_py/codegen/components/: __init__.py  abi_loader.py  base_contract.py  base_mixin.py  contract_factory.py  contract_loader.py  get_abi_file.py
cow_py/codegen/components/templates/: contract_template.handlebars  contract_template.hbs
cow_py/codegen/components/templates/partials/: contract_mixin.hbs  dataclasses.hbs  enums.hbs
cow_py/codegen/example/: VaultABI.json  Vault_types.py
cow_py/common/: __init__.py  config.py  constants.py
cow_py/common/api/: api_base.py  decorators.py  errors.py
cow_py/common/chains/: __init__.py  utils.py
cow_py/composable/: __init__.py  conditional_order.py  multiplexer.py  types.py  utils.py
cow_py/composable/order_types/: twap.py
cow_py/contracts/: __init__.py  domain.py  order.py  sign.py
cow_py/core/: __init__.py  abis.py  constants.py  cow_error.py
cow_py/core/chains/: __init__.py  utils.py
cow_py/cow/: swap.py
cow_py/order_book/: api.py  config.py
cow_py/order_book/__generated__/: model.py
cow_py/order_signing/: order_signing_utils.py  utils.py
cow_py/subgraph/: deployments.py
cow_py/subgraph/client/: __init__.py  last_days_volume.py  last_hours_volume.py  subgraph_client.py  totals.py
cow_py/subgraph/queries/: lastDayVolume.gql
cow_py/subgraphs/: client.py  deployments.py
cow_py/subgraphs/base/: client.py  query.py
cow_py/subgraphs/queries/: queries.py
cow_py/web3/: provider.py
cowdao_cowpy/: __init__.py  post_process.py
cowdao_cowpy/app_data/: app_data_cid.py  app_data_doc.py  app_data_hex.py  consts.py  utils.py
cowdao_cowpy/codegen/: __init__.py  abi_handler.py  main.py  solidity_converter.py
cowdao_cowpy/codegen/__generated__/: ComposableCow.py  ExtensibleFallbackHandler.py  Milkman.py  TWAP.py
cowdao_cowpy/codegen/components/: __init__.py  abi_loader.py  base_contract.py  base_mixin.py  contract_factory.py  contract_loader.py  get_abi_file.py
cowdao_cowpy/codegen/components/templates/: contract_template.hbs
cowdao_cowpy/codegen/components/templates/partials/: contract_class.hbs  contract_mixin.hbs
cowdao_cowpy/common/: config.py  constants.py
cowdao_cowpy/common/api/: api_base.py  decorators.py  errors.py
cowdao_cowpy/common/chains/: __init__.py  utils.py
cowdao_cowpy/composable/: conditional_order.py  multiplexer.py  types.py  utils.py
cowdao_cowpy/composable/order_types/: twap.py
cowdao_cowpy/contracts/: __init__.py  domain.py  order.py  sign.py
cowdao_cowpy/cow/: swap.py
cowdao_cowpy/order_book/: api.py  base.py  config.py
cowdao_cowpy/subgraph/: deployments.py
cowdao_cowpy/subgraph/client/: async_base_client.py  enums.py  input_types.py  last_days_volume.py  last_hours_volume.py  subgraph_client.py  totals.py
cowdao_cowpy/subgraph/queries/: lastHoursVolume.gql  totals.gql
cowdao_cowpy/web3/: provider.py
docs/: appdata.md  index.md  orders.md
docs/stylesheets/: extra.css
examples/: appdata.py  cancel_all_orders.py  limit_orders_e2e.py  order_posting_e2e.py  price_quoting_e2e.py
libs/base/: README.md  pyproject.toml
libs/base/cow_py/base/: __init__.py
libs/base/tests/: test_base.py
libs/fancy/: README.md  pyproject.toml
libs/fancy/cow_py/fancy/: __init__.py  adder3.py
libs/fancy/tests/: test_fancy.py
tests/: conftest.py  test_examples.py
tests/app_data/: appDataCid.py  appDataHex.py  app_data_cid.py  app_data_doc.py  app_data_hex.py  mocks.py  test_app_data_doc.py  test_app_data_hex.py  test_default_app_code.py  utils.py
tests/codegen/: test_abi_handler.py  test_solidity_converter.py
tests/codegen/components/: test_base_contract.py  test_contract_factory.py
tests/common/: test_core_api.py  test_cow_error.py  test_supported_chains.py
tests/common/api/: test_api_base.py  test_http_hardening.py  test_rate_limiter.py
tests/composable/: test_conditional_order.py  test_multiplexer.py
tests/composable/order_types/: mock_conditional_order.py  mock_twap_data.py  test_twap.py
tests/contracts/: conftest.py  test_abis.py  test_orders.py  test_sign.py
tests/core/: test_abis.py  test_core_api.py  test_cow_error.py
tests/cow/: test_swap.py
tests/e2e/: test_create_limit_order.py  test_order_flow_offline.py  test_post_and_cancel_order_live_e2e.py  test_upload_app_data.py
tests/e2e/cassettes/test_post_and_cancel_order_live_e2e/: test_post_and_cancel_order_live_e2e.yaml
tests/open_api_spec/: test_chains.py
tests/order_book/: test_api.py  test_put_app_data.py  test_serialization_warnings.py
tests/order_signing/: test_utils.py
tests/subgraph/: test_deployments.py
tests/subgraph/client/: test_subgraph_client.py
tests/subgraphs/: deployments.py
tests/token_swapper/: test_swapper.py
