[tool.poetry]
name = "cowdao-cowpy"
version = "1.0.1"
description = ""
authors = [
	"José Ribeiro <jose@bleu.studio>",
	"8baller <8baller@station.codes>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.23.0,<1.0.0"
web3 = ">=6,<8"
pydantic = "^2.7.0"
backoff = "^2.2.1"
aiolimiter = "^1.1.0"
multiformats = "^0.3.1.post4"
aiofiles = "^24.1.0"
jsonref = "^1.1.0"
pymultihash = "^0.8.2"
pycryptodomex = "^3.20.0"
eth-abi = "^5.1.0"
pymerkle = ">=5,<7"
eth-typing = ">=4,<6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pyright = "^1.1.392"
pybars3 = "^0.9.7"
pytest = "^8.1.1"
ipython = "^8.23.0"
pre-commit = "^3.7.0"
datamodel-code-generator = "^0.35.0"
ariadne-codegen = "^0.13.0"
pytest-mock = "^3.14.0"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.6"
web3 = { extras = ["tester"], version = ">=6,<8" }
pycln = "^2.4.0"
pytest-cov = "^5.0.0"
python-dotenv = ">=1,<2"
tbump = "^6.11.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"
mkdocs-include-markdown-plugin = "^7.1.6"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-material-extensions = "^1.3.1"
twine = "^6.1.0"
mkdocs-autorefs = "^1.4.2"
codespell = "^2.4.1"
pytest-rerunfailures = "^16.1"


[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ariadne-codegen]
remote_schema_url = "https://api.thegraph.com/subgraphs/name/cowprotocol/cow"
queries_path = "cowdao_cowpy/subgraph/queries"
target_package_name = "client"
target_package_path = "cowdao_cowpy/subgraph"
client_name = "SubgraphClient"
client_file_name = "subgraph_client"

[tool.pyright]
# NOTE: these paths are excluded but not IGNORED. They are still included in the analysis if they are referenced by source files that are not excluded. 
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "cowdao_cowpy/subgraph/client/*.py",
    "cowdao_cowpy/order_book/generated/*.py",
    ".venv/",
    "**/__generated__",
]
reportIncompatibleVariableOverride = 'warning'
strictParameterNoneValue = false

